# costco-data-etl

./: .gitignore  CHANGELOG.md  pyproject.toml
costco_etl/: main_runner.py
costco_etl/api/: app.py
costco_etl/category_structuring/: prune_category_tree.py
costco_etl/observability/: run_context.py
costco_etl/product_categories/: build_category_tree.py  prune_category_tree.py
costco_etl/scraping/: costco_scraper.py  get_key.py  get_megamenu.py  navigation_crawler.py  parse_megamenu.py
costco_etl/storage/: init_db.py  paths.py  persist_category_map.py  persist_category_metrics.py  persist_product_categories.py  persist_products.py
