[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "costco-etl"
version = "1.0.0"
description = "End-to-end Python ETL pipeline for scraping, organizing, and analyzing Costco product catalog data."
authors = [
  { name = "Leonardo Vila" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "requests>=2.31.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["costco_etl*"]